# HGEngineReloadedEditor

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
cmake/: FindClang.cmake  InstallSystem.cmake  PrepareProjects.cmake
include/: AbstractPropertyProcessor.hpp
include/AssetSystem/: AssetsManager.hpp
include/AssetSystem/Assets/: AbstractAsset.hpp  BehaviourAsset.hpp  DirectoryAsset.hpp  OtherAsset.hpp  RootAsset.hpp  TextAsset.hpp  TextureAsset.hpp
include/CodeAnalyze/: BehaviourSearchVisitor.hpp
include/DefaultPropertyProcessors/: ColorProcessor.hpp  DoubleProcessor.hpp  FloatProcessor.hpp  GameObjectProcessor.hpp  IntegerProcessor.hpp  NumberProcessor.hpp  ProjectionProcessor.hpp
include/EditBehaviours/: CameraMovement.hpp  GraphicsInterface.hpp  TransformBehaviour.hpp
include/Editor/: Application.hpp  BehaviourBuildController.hpp  EngineInfo.hpp  ProjectController.hpp  ProjectMetadata.hpp  ShortcutsProcessor.hpp  SystemController.hpp
include/Fabrics/: AssetsFabric.hpp  PropertyEditorsFabric.hpp
include/Factories/: PropertyEditorsFabric.hpp
include/Guizmo/: Guizmo.hpp
include/Materials/: BlitMaterial.hpp  ColorMaterial.hpp
include/Scenes/: EditorScene.hpp
include/Tools/: EnumIterator.hpp  FilesystemTools.hpp  GlobalThumbnails.hpp  ImGuiIdentificators.hpp  ImGuiWidgets.hpp  ThumbnailsCache.hpp
include/Widgets/: AbstractWidget.hpp  Assets.hpp  BenchmarkView.hpp  CommonSettings.hpp  GameObjects.hpp  InformationModal.hpp  Inspector.hpp  LineInputModal.hpp  Logging.hpp  OpenPath.hpp  Scene.hpp  TextureCacheView.hpp
libraries/: CMakeLists.txt
libraries/CMakeServerConnector/: CMakeLists.txt  CMakeLists.txt~
libraries/CMakeServerConnector/example/: CMakeLists.txt
libraries/CMakeServerConnector/example/src/: main.cpp
libraries/CMakeServerConnector/include/: CMakeAsyncClient.hpp  CMakeBlockingClient.hpp  CMakeConnector.hpp  Interface.hpp  Version.hpp
libraries/CMakeServerConnector/include/Messages/: BaseSignalResponse.hpp  BasicMessage.hpp  CMakeInputsRequest.hpp  CMakeInputsResponse.hpp  CTestInfoRequest.hpp  CTestInfoResponse.hpp  CacheRequest.hpp  CacheResponse.hpp  Cast.hpp  CodeModelRequest.hpp  CodeModelResponse.hpp  ComputeRequest.hpp  ComputeResponse.hpp  ConfigureRequest.hpp  ConfigureResponse.hpp  ErrorResponse.hpp  FileChangeSignalResponse.hpp  FileSystemWatchersRequest.hpp  FileSystemWatchersResponse.hpp  GlobalSettingsRequest.hpp  GlobalSettingsResponse.hpp  HandshakeRequest.hpp  HandshakeResponse.hpp  HelloResponse.hpp  MessageResponse.hpp  ProgressResponse.hpp  Register.hpp  SetGlobalSettingsRequest.hpp  SetGlobalSettingsResponse.hpp  Types.hpp
libraries/CMakeServerConnector/src/: CMakeAsyncClient.cpp  CMakeBlockingClient.cpp  CMakeConnector.cpp  LinuxInterface.cpp
libraries/CMakeServerConnector/src/Messages/: Register.cpp  Serializators.cpp  Types.cpp
resources/project_files/: ConfigureProject.cmake
scripts/: install.py
src/: AbstractPropertyProcessor.cpp  main.cpp
src/AssetSystem/: AssetsManager.cpp
src/AssetSystem/Assets/: AbstractAsset.cpp  BehaviourAsset.cpp  DirectoryAsset.cpp  OtherAsset.cpp  RootAsset.cpp  TextAsset.cpp  TextureAsset.cpp
src/CodeAnalyze/: BehaviourSearchVisitor.cpp
src/DefaultPropertyProcessors/: ColorProcessor.cpp  DoubleProcessor.cpp  FloatProcessor.cpp  GameObjectProcessor.cpp  IntegerProcessor.cpp  ProjectionProcessor.cpp
src/EditBehaviours/: CameraMovement.cpp  GraphicsInterface.cpp  TransformBehaviour.cpp
src/Editor/: Application.cpp  BehaviourBuildController.cpp  EngineInfo.cpp  ProjectController.cpp  ProjectMetadata.cpp  ShortcutsProcessor.cpp  SystemController.cpp
src/Fabrics/: AssetsFabric.cpp  PropertyEditorsFabric.cpp
src/Factories/: PropertyEditorsFabric.cpp
src/Guizmo/: Guizmo.cpp
src/Materials/: BlitMaterial.cpp  ColorMaterial.cpp
src/Scenes/: EditorScene.cpp
src/Tools/: FilesystemTools.cpp  GlobalThumbnails.cpp  ImGuiWidgets.cpp  ThumbnailsCache.cpp
src/Widgets/: AbstractWidget.cpp  Assets.cpp  BenchmarkView.cpp  GameObjects.cpp  InformationModal.cpp  Inspector.cpp  LineInputModal.cpp  Logging.cpp  OpenPath.cpp  Scene.cpp  TextureCacheView.cpp
